# docs/swagger.yaml
@@ -101,21 +101,22 @@ definitions:
       user:
         $ref: '#/definitions/entity.UserResponse'
     type: object
-  entity.StoveSignInRequest:
+  entity.SteamSignInRequest:
     properties:
-      avatar_url:
+      steam_id:
         type: string
-      display_name:
-        type: string
-      email:
-        type: string
-      id:
+      ticket:
         type: string
     required:
-    - avatar_url
-    - display_name
-    - email
-    - id
+    - steam_id
+    - ticket
+    type: object
+  entity.StoveSignInRequest:
+    properties:
+      access_token:
+        type: string
+    required:
+    - access_token
     type: object
   entity.UserResponse:
     properties:
@@ -419,11 +420,46 @@ paths:
       summary: 최고 기록 조회
       tags:
       - Record
+  /steam/signin:
+    post:
+      consumes:
+      - application/json
+      description: Steam 티켓 인증을 통해 로그인 처리 및 세션 생성
+      parameters:
+      - description: Steam 로그인 요청 정보
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/entity.SteamSignInRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 로그인 성공 및 세션 정보
+          schema:
+            allOf:
+            - $ref: '#/definitions/entity.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/entity.SessionResponse'
+              type: object
+        "401":
+          description: 인증 실패
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "500":
+          description: 서버 내부 오류
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+      summary: Steam 로그인
+      tags:
+      - Steam
   /stove/signin:
     post:
       consumes:
       - application/json
-      description: Stove 플랫폼 사용자 정보로 로그인 처리 및 세션 생성
+      description: Stove 액세스 토큰 검증 후 로그인 처리 및 세션 생성
       parameters:
       - description: Stove 로그인 요청 정보
         in: body
@@ -445,6 +481,10 @@ paths:
               type: object
         "400":
           description: 요청 데이터 검증 실패
+          schema:
+            $ref: '#/definitions/entity.ErrorResponse'
+        "401":
+          description: 인증 실패
           schema:
             $ref: '#/definitions/entity.ErrorResponse'
         "500":
